fixed side spacing

--- a/sass/base/_global.sass
+++ b/sass/base/_global.sass
@@ -2,3 +2,6 @@
 	font-family: $muliFont
 body
 	overflow-x: hidden
+
+.blurMe
+	filter: blur(1px)
