--- a/sass/components/_main.sass
+++ b/sass/components/_main.sass
@@ -3,5 +3,7 @@
 		position: relative
 		top: 90px
 		z-index: 9
+		width: 95vw
+		margin: 0 auto
 	.navbar
 		z-index: 10
