--- a/sass/components/_menu.sass
+++ b/sass/components/_menu.sass
@@ -1,5 +1,4 @@
 .menu-container
 	width: 100vw
-	height: 100vh
-	background-color: #9b0000
-	//filter: blur(100px)
+	height: auto
+	background-color: #ffffff
