--- a/sass/components/_navbar-btn.sass
+++ b/sass/components/_navbar-btn.sass
@@ -4,5 +4,5 @@
 	height: 35px
 	cursor: pointer
 	position: fixed
-	right: 3%
+	right: 2.5%
 	z-index: 9999
