--- a/sass/components/_navbar.sass
+++ b/sass/components/_navbar.sass
@@ -12,18 +12,18 @@
 		position: relative
 		transition: $transition
 		width: 100%
-		left: 3%
+		left: 2.5%
 		@import "navbar-socials"
 		.navbar-header-text
 			color: #ffffff
 			position: relative
 			z-index: 2
+			margin-left: 22px
 			display: inline-block
 			font-weight: 500
 		.navbar-header-block
 			background-color: $green
 			width: 42px
-			left: -22px
 			height: 100%
 			max-height: 45px
 			position: absolute
